Add trailing space to PROMPT in yes-or-no-p

* doc/lispref/minibuf.texi (Yes-or-No Queries): Describe PROMPT
massage for y-or-n-p and yes-or-no-p.

* lisp/subr.el (y-or-n-p): Adapt docstring.

* src/fns.c (Fyes_or_no_p): Add trailing space to PROMPT if
needed.  (Bug#63399)